2021-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--chmod-font-lock-regex): Account for ACL
	directories.

2021-06-03  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-beginning-of-buffer, diredc-end-of-buffer):
	New DWIM functions.
	(diredc--create-keymap): Bind them.

2021-06-03  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--report-counts-and-sizes): New feature, for
	displaying summary of marked files in (new) header-line.
	(diredc-header-line, diredc-header-*-marks)
	(diredc-header-D-marks): Faces for new feature.
	(diredc-header-line): defcustom to toggle new feature.
	(diredc--thousands): Support function, for improved readability.
	(diredc--mark-msg): New helper function for feature.
	(diredc-thousands-separator): Option for the support function.
	(diredc-mode, diredc--hook-function): Make use of header-line
	consistent.
	(diredc--hook-function--post-command): Use new feature.

2021-06-02  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--match-command): Allow async shell commands to
	over-ride shell aliases.
	(diredc--hook-function, diredc-browse-mode, diredc-history-mode)
	(diredc-mode): Use #' notation.

2021-06-01  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-mode): Improve toggling of mode features and
	window-dedication.

2021-05-23  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-sort-or-edit): New feature with many more
	sorting options.
	(diredc--create-keymap): Bind a key for it.
	(diredc--sort-options): Data structure for it.
	(diredc-sort-prefix-ascending, diredc-sort-suffix-ascending)
	(diredc-sort-prefix-descending, diredc-sort-suffix-descending):
	Defcustoms for it.
	(diredc--sort-columns-regexp): Definition of special case for
	sorting by chmod, owner, group.
	(diredc--lc-collate-original-value, diredc-mode): Save original
	value of LC_COLLATE.
	(diredc-restore-collation, diredc-mode): Restore it when done.
	(diredc--sort-option-special): Save state of special case.